include/wtf.h

typedef struct wtf_session wtf_session_t;
typedef struct wtf_stream wtf_stream_t;
//! Result codes for all WebTransport operations
typedef enum {
    WTF_SUCCESS = 0,
    WTF_ERROR_INVALID_PARAMETER,
    WTF_ERROR_OUT_OF_MEMORY,
    WTF_ERROR_INTERNAL,
    WTF_ERROR_CONNECTION_ABORTED,
    WTF_ERROR_STREAM_ABORTED,
    WTF_ERROR_INVALID_STATE,
    WTF_ERROR_BUFFER_TOO_SMALL,
    WTF_ERROR_NOT_FOUND,
    WTF_ERROR_REJECTED,
    WTF_ERROR_TIMEOUT,
    WTF_ERROR_TLS_HANDSHAKE_FAILED,
    WTF_ERROR_PROTOCOL_VIOLATION,
    WTF_ERROR_FLOW_CONTROL
} wtf_result_t;
// #endregion

// #region Data Structures

//! Data buffer for network operations
typedef struct {
    uint32_t length;  //! Size of data in bytes
    uint8_t* data;    //! Pointer to buffer data
} wtf_buffer_t;
//! Get session peer address
//! @param session target session
//! @param address_buffer buffer to receive address data
//! @param buffer_size pointer to buffer size, updated with actual size
//! @return WTF_SUCCESS on success, error code on failure
WTF_API wtf_result_t wtf_session_get_peer_address(wtf_session_t* session, void* address_buffer,
                                                  size_t* buffer_size);
//! Set session user context
//! @param session target session
//! @param user_context user-provided context data
WTF_API void wtf_session_set_context(wtf_session_t* session, void* user_context);
//! Get session user context
//! @param session target session
//! @return user-provided context data  
WTF_API void* wtf_session_get_context(wtf_session_t* session);
// #endregion

// #region Stream Management API

//! Send data on a stream
//! @param stream target stream
//! @param buffers array of data buffers to send
//! @param buffer_count number of buffers in array
//! @param fin true if this is the final data
//! @return WTF_SUCCESS on success, error code on failure
//!
//! @note Memory ownership:
//! - On SUCCESS: The caller retains ownership of buffer data (buffers[i].data).
//!   The library will emit a WTF_STREAM_EVENT_SEND_COMPLETE event when the send
//!   operation completes. The application must free the buffer data in the
//!   send completion callback.
//! - On FAILURE: The caller retains full ownership of both the buffers array
//!   and all data, and should free them immediately.
//!
//! @note Send completion handling:
//! - Applications MUST implement WTF_STREAM_EVENT_SEND_COMPLETE handling in their
//!   stream callback to free the sent buffer data.
//! - If no stream callback is set, the library will automatically free the
//!   buffer data as a fallback, but this is not recommended.
//!
//! @note The function passes the original buffers directly to the QUIC layer without
//! modification or copying. No protocol headers are added for stream data.
WTF_API wtf_result_t wtf_stream_send(wtf_stream_t* stream, const wtf_buffer_t* buffers,
                                     uint32_t buffer_count, bool fin);
//! Close a stream gracefully (send FIN)
//! @param stream stream to close
//! @return WTF_SUCCESS on success, error code on failure
WTF_API wtf_result_t wtf_stream_close(wtf_stream_t* stream);
//! Abort a stream with error code
//! @param stream stream to abort
//! @param error_code application error code
//! @return WTF_SUCCESS on success, error code on failure
WTF_API wtf_result_t wtf_stream_abort(wtf_stream_t* stream, uint32_t error_code);
//! Get the stream ID
//! @param stream target stream
//! @param stream_id pointer to receive the stream ID
//! @return WTF_SUCCESS on success, error code on failure
WTF_API wtf_result_t wtf_stream_get_id(wtf_stream_t* stream, uint64_t* stream_id);