java/src/com/structmap/webtransportfast/wtf_h.java


    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * wtf_result_t wtf_session_get_peer_address(wtf_session_t *session, void *address_buffer, size_t *buffer_size)
     * }
     */
    public static FunctionDescriptor wtf_session_get_peer_address$descriptor() {
        return wtf_session_get_peer_address.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * wtf_result_t wtf_session_get_peer_address(wtf_session_t *session, void *address_buffer, size_t *buffer_size)
     * }
     */
    public static MethodHandle wtf_session_get_peer_address$handle() {
        return wtf_session_get_peer_address.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * wtf_result_t wtf_session_get_peer_address(wtf_session_t *session, void *address_buffer, size_t *buffer_size)
     * }
     */
    public static MemorySegment wtf_session_get_peer_address$address() {
        return wtf_session_get_peer_address.ADDR;
    }

    /**
     * {@snippet lang=c :
     * wtf_result_t wtf_session_get_peer_address(wtf_session_t *session, void *address_buffer, size_t *buffer_size)
     * }
     */
    public static int wtf_session_get_peer_address(MemorySegment session, MemorySegment address_buffer, MemorySegment buffer_size) {
        var mh$ = wtf_session_get_peer_address.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("wtf_session_get_peer_address", session, address_buffer, buffer_size);
            }
            return (int)mh$.invokeExact(session, address_buffer, buffer_size);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class wtf_session_set_context {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            wtf_h.C_POINTER,
            wtf_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("wtf_session_set_context");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void wtf_session_set_context(wtf_session_t *session, void *user_context)
     * }
     */
    public static FunctionDescriptor wtf_session_set_context$descriptor() {
        return wtf_session_set_context.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void wtf_session_set_context(wtf_session_t *session, void *user_context)
     * }
     */
    public static MethodHandle wtf_session_set_context$handle() {
        return wtf_session_set_context.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void wtf_session_set_context(wtf_session_t *session, void *user_context)
     * }
     */
    public static MemorySegment wtf_session_set_context$address() {
        return wtf_session_set_context.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void wtf_session_set_context(wtf_session_t *session, void *user_context)
     * }
     */
    public static void wtf_session_set_context(MemorySegment session, MemorySegment user_context) {
        var mh$ = wtf_session_set_context.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("wtf_session_set_context", session, user_context);
            }
            mh$.invokeExact(session, user_context);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class wtf_session_get_context {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            wtf_h.C_POINTER,
            wtf_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("wtf_session_get_context");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void *wtf_session_get_context(wtf_session_t *session)
     * }
     */
    public static FunctionDescriptor wtf_session_get_context$descriptor() {
        return wtf_session_get_context.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void *wtf_session_get_context(wtf_session_t *session)
     * }
     */
    public static MethodHandle wtf_session_get_context$handle() {
        return wtf_session_get_context.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void *wtf_session_get_context(wtf_session_t *session)
     * }
     */
    public static MemorySegment wtf_session_get_context$address() {
        return wtf_session_get_context.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void *wtf_session_get_context(wtf_session_t *session)
     * }
     */
    public static MemorySegment wtf_session_get_context(MemorySegment session) {
        var mh$ = wtf_session_get_context.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("wtf_session_get_context", session);
            }
            return (MemorySegment)mh$.invokeExact(session);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class wtf_stream_send {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            wtf_h.C_INT,
            wtf_h.C_POINTER,
            wtf_h.C_POINTER,
            wtf_h.C_INT,
            wtf_h.C_BOOL
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("wtf_stream_send");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * wtf_result_t wtf_stream_send(wtf_stream_t *stream, const wtf_buffer_t *buffers, uint32_t buffer_count, bool fin)
     * }
     */
    public static FunctionDescriptor wtf_stream_send$descriptor() {
        return wtf_stream_send.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * wtf_result_t wtf_stream_send(wtf_stream_t *stream, const wtf_buffer_t *buffers, uint32_t buffer_count, bool fin)
     * }
     */
    public static MethodHandle wtf_stream_send$handle() {
        return wtf_stream_send.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * wtf_result_t wtf_stream_send(wtf_stream_t *stream, const wtf_buffer_t *buffers, uint32_t buffer_count, bool fin)
     * }
     */
    public static MemorySegment wtf_stream_send$address() {
        return wtf_stream_send.ADDR;
    }

    /**
     * {@snippet lang=c :
     * wtf_result_t wtf_stream_send(wtf_stream_t *stream, const wtf_buffer_t *buffers, uint32_t buffer_count, bool fin)
     * }
     */
    public static int wtf_stream_send(MemorySegment stream, MemorySegment buffers, int buffer_count, boolean fin) {
        var mh$ = wtf_stream_send.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("wtf_stream_send", stream, buffers, buffer_count, fin);
            }
            return (int)mh$.invokeExact(stream, buffers, buffer_count, fin);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class wtf_stream_close {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            wtf_h.C_INT,
            wtf_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("wtf_stream_close");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * wtf_result_t wtf_stream_close(wtf_stream_t *stream)
     * }
     */
    public static FunctionDescriptor wtf_stream_close$descriptor() {
        return wtf_stream_close.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * wtf_result_t wtf_stream_close(wtf_stream_t *stream)
     * }
     */
    public static MethodHandle wtf_stream_close$handle() {
        return wtf_stream_close.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * wtf_result_t wtf_stream_close(wtf_stream_t *stream)
     * }
     */
    public static MemorySegment wtf_stream_close$address() {
        return wtf_stream_close.ADDR;
    }

    /**
     * {@snippet lang=c :
     * wtf_result_t wtf_stream_close(wtf_stream_t *stream)
     * }
     */
    public static int wtf_stream_close(MemorySegment stream) {
        var mh$ = wtf_stream_close.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("wtf_stream_close", stream);
            }
            return (int)mh$.invokeExact(stream);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class wtf_stream_abort {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            wtf_h.C_INT,
            wtf_h.C_POINTER,
            wtf_h.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("wtf_stream_abort");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * wtf_result_t wtf_stream_abort(wtf_stream_t *stream, uint32_t error_code)
     * }
     */
    public static FunctionDescriptor wtf_stream_abort$descriptor() {
        return wtf_stream_abort.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * wtf_result_t wtf_stream_abort(wtf_stream_t *stream, uint32_t error_code)
     * }
     */
    public static MethodHandle wtf_stream_abort$handle() {
        return wtf_stream_abort.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * wtf_result_t wtf_stream_abort(wtf_stream_t *stream, uint32_t error_code)
     * }
     */
    public static MemorySegment wtf_stream_abort$address() {
        return wtf_stream_abort.ADDR;
    }

    /**
     * {@snippet lang=c :
     * wtf_result_t wtf_stream_abort(wtf_stream_t *stream, uint32_t error_code)
     * }
     */
    public static int wtf_stream_abort(MemorySegment stream, int error_code) {
        var mh$ = wtf_stream_abort.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("wtf_stream_abort", stream, error_code);
            }
            return (int)mh$.invokeExact(stream, error_code);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class wtf_stream_get_id {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            wtf_h.C_INT,
            wtf_h.C_POINTER,
            wtf_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("wtf_stream_get_id");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * wtf_result_t wtf_stream_get_id(wtf_stream_t *stream, uint64_t *stream_id)
     * }
     */
    public static FunctionDescriptor wtf_stream_get_id$descriptor() {
        return wtf_stream_get_id.DESC;
    }
